// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot simulation 1`] = `
Array [
  Object {
    "dx": 0.5035940373614989,
    "dy": -0.8639404178147618,
    "id": 1,
    "status": 0,
    "type": "person",
    "x": 473.85124883041834,
    "y": 17.93929726624796,
  },
  Object {
    "dx": 0.9973697847098382,
    "dy": 0.07248111856098155,
    "id": 2,
    "infected_until": 585.8699470626841,
    "status": 1,
    "type": "person",
    "x": 25.577609916755566,
    "y": 382.8935838610805,
  },
]
`;

exports[`Snapshot simulation 2`] = `
Array [
  Object {
    "dx": 0.5035940373614989,
    "dy": -0.8639404178147618,
    "id": 1,
    "status": 0,
    "type": "person",
    "x": 474.35484286777984,
    "y": 17.0753568484332,
  },
  Object {
    "dx": 0.9973697847098382,
    "dy": 0.07248111856098155,
    "id": 2,
    "infected_until": 585.8699470626841,
    "status": 1,
    "type": "person",
    "x": 26.574979701465406,
    "y": 382.9660649796415,
  },
]
`;
